# popsigner

./: .dockerignore  .gitignore  Makefile  README.md  TESTING.md  bao_client.go  bao_keyring.go  bao_keyring_parallel_test.go  bao_keyring_test.go  bao_store.go  bao_store_test.go  errors.go  errors_test.go  types.go  types_test.go
control-plane/: .gitignore  Makefile  README.md  config.yaml  go.mod  go.sum  package-lock.json  package.json  tailwind.config.js
control-plane/cmd/pop-deployer/: README.md  go.mod  go.sum  main.go  nitro_writers.go  pipeline_nitro.go  pop_deployer_test.go  writers.go
control-plane/cmd/popsigner-lite/: Dockerfile  README.md  SIGNING-COMPATIBILITY.md  main.go
control-plane/cmd/rpc-gateway/: main.go  main_test.go  nitro_integration_test.go  opstack_integration_test.go  test-nitro.sh  test-opstack.sh
control-plane/cmd/server/: main.go
control-plane/cmd/test-anvil-deploy/: main.go
control-plane/config/: config.example.yaml
control-plane/docker/: Caddyfile  Dockerfile  README.md  apply-bootstrap-migrations.sh  check-health.sh  docker-compose.dev.yml  docker-compose.yml  login-dev.sh  seed-dev-user.sql  start-dev.sh  test-routing.sh
control-plane/internal/config/: config.go
control-plane/internal/database/: postgres.go  redis.go
control-plane/internal/ethereum/: hex.go  hex_test.go  transaction.go  transaction_test.go  types.go  types_test.go
control-plane/internal/handler/: audit_handler_test.go  billing_handler_test.go  certificate_handler.go  key_handler.go  key_handler_test.go  sign_handler.go  sign_handler_test.go
control-plane/internal/middleware/: auth.go  cors.go  (+3 more)
doc/deployment/: SCALEWAY.md
doc/design/: DESIGN_SYSTEM.md  README.md
doc/implementation/: IMPL_08A_AUTH_USERS.md  IMPL_08B_AUTH_OAUTH.md  IMPL_13A_OPERATOR_FOUNDATION.md  IMPL_13B_OPERATOR_OPENBAO.md  IMPL_13C_OPERATOR_DATALAYER.md  IMPL_13D_OPERATOR_APPS.md  IMPL_13E_OPERATOR_TENANT.md  IMPL_14F_REBRAND_WEBAPP_LANDING.md  IMPL_14G_REBRAND_WEBAPP_DASHBOARD.md  IMPL_14H_REBRAND_WEBAPP_CONFIG.md  IMPL_14I_REBRAND_OPERATOR.md  IMPL_14_POPSIGNER_REBRAND.md  README.md
doc/product/: ARCHITECTURE.md  PRD_CONTROL_PLANE.md  PRD_DASHBOARD.md  PRD_OPERATOR.md  README.md
migration/: export.go  export_test.go  import.go  import_test.go
operator/: Dockerfile
operator/controllers/: backup_controller.go  backup_controller_test.go  cluster_apps.go  cluster_controller.go  cluster_openbao.go  restore_controller.go  restore_controller_test.go
plugin/: .gitignore  Dockerfile  go.mod  go.sum
plugin/secp256k1/: backend.go  backend_test.go  crypto.go  crypto_test.go  path_sign.go  path_sign_test.go  path_verify.go  path_verify_test.go  types.go
popctl/: go.mod  go.sum
popctl/cmd/: certs.go  tx.go
scripts/: build-push.sh  docker-build-push.sh  scaleway-setup.sh
sdk-go/: README.md  audit.go  banhbaoring.go  banhbaoring_test.go  celestia.go  errors.go  go.mod  go.sum  http.go  keys.go  orgs.go  sign.go  types.go
sdk-rust/: Cargo.toml  README.md
sdk-rust/examples/: basic.rs  celestia_signer.rs  parallel_workers.rs
sdk-rust/src/: audit.rs  celestia.rs  client.rs  error.rs  keys.rs  lib.rs  orgs.rs  sign.rs  types.rs
sdk-rust/tests/: client_test.rs  keys_test.rs  sign_test.rs
(+275 files in other folders)
